--- a/prod.env
+++ b/prod.env
@@ -4,5 +4,5 @@ PORT=5000
 NODE_ENV=DEVELOPMENT
 EMAIL_USER=ahadkhan40451@gmail.com
 EMAIL_PASS=cohs ybas fjfx nolt
-FRONTEND_URL=https://cavapoops.vercel.app/
+FRONTEND_URL=https://cavapoops.vercel.app
 BASE_URL=https://cavapoops.onrender.com
