--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "echo 'No build necessary'"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "aws-sdk": "^2.1412.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^12.2.0",
     "joi": "^17.6.4",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.6.0",
@@ -26,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "pubnub": "^7.2.2",
+    "save": "^2.9.0",
     "stripe": "^13.11.0",
     "winston": "^3.8.2",
     "winston-mongodb": "^5.1.0"
